Footer & main section headers
- Create footer
- Create headers for page sections
- Basic css

--- a/index.html
+++ b/index.html
@@ -3,18 +3,38 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Conor Butte</title>
+    <title>Conor's Site</title>
   </head>
-  <body>
-    <header>Yello</header>
-    <div>Body</div>
+  <body class="main-body">
+    <script src="js/index.js"></script>
+    <div class="sections">
+      <div class="section-item">
+        <p class="section-title">About Me</p>
+        <p class="divider"></p>
+      </div>
+      <div class="section-item">
+        <p class="section-title">Projects</p>
+        <p class="divider"></p>
+      </div>
+      <div class="section-item">
+        <p class="section-title">Contact Me</p>
+        <p class="divider"></p>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="icon-container">
+        <a class="icon-item" href="https://github.com/Cblands"><i class="fa fa-github-square fa-2x"></i></a>
+        <a class="icon-item" href="mailto:conorbutte+web@gmail.com"><i class="fa fa-envelope-square fa-2x"></i></i></a>
+        <a class="icon-item" href="https://www.linkedin.com/in/cblands/"><i class="fa fa-linkedin fa-2x"></i></a>
+      </div>
+      <p class="small-footer">Built by Conor Butte-Landsfried - 2021</p>
+    </footer>
   </body>
-  <footer>
-    Test Footer
-  </footer>
 </html>
