--- a/index.html
+++ b/index.html
@@ -14,18 +14,28 @@
   </head>
   <body class="main-body">
     <script src="js/index.js"></script>
+    <div class="resume-box">
+      <a class="resume-link" href=".resources/Resume Feb 2021.pdf"><i class="fa fa-download"></i> Download Resume</a>
+    </div>
     <div class="sections">
       <div class="section-item">
         <p class="section-title">About Me</p>
         <p class="divider"></p>
+        Software Engineering student at the University of Victoria.
       </div>
       <div class="section-item">
         <p class="section-title">Projects</p>
         <p class="divider"></p>
+        Lots of good stuff:
+        <a href="tower-climber.conorbutte.me">Tower Climber</a>
+        <a href="harold-engine.conorbutte.me">Harold Engine</a>
       </div>
       <div class="section-item">
-        <p class="section-title">Contact Me</p>
+        <p class="section-title">Professional Experience</p>
         <p class="divider"></p>
+        Two years as a full stack developer at Varsity Tutors.
+        IT technician for the Department of Defence.
+        Intructor for Byte Camp.
       </div>
     </div>
     <footer class="footer">
