--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon_io/favicon.ico" />
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,15 +27,15 @@
         <p class="section-title">Projects</p>
         <p class="divider"></p>
         Lots of good stuff:
-        <a href="tower-climber.conorbutte.me">Tower Climber</a>
-        <a href="harold-engine.conorbutte.me">Harold Engine</a>
+        <a href="http://tower-climber.conorbutte.me">Tower Climber</a>
+        <a href="http://harold-engine.conorbutte.me">Harold Engine</a>
       </div>
       <div class="section-item">
         <p class="section-title">Professional Experience</p>
         <p class="divider"></p>
         Two years as a full stack developer at Varsity Tutors.
         IT technician for the Department of Defence.
-        Intructor for Byte Camp.
+        Instructor for Byte Camp.
       </div>
     </div>
     <footer class="footer">
