--- a/index.html
+++ b/index.html
@@ -20,22 +20,27 @@
     <div class="sections">
       <div class="section-item">
         <p class="section-title">About Me</p>
+        <p class="section-content">
+          Software Engineering student at the University of Victoria.
+        </p>
         <p class="divider"></p>
-        Software Engineering student at the University of Victoria.
-      </div>
-      <div class="section-item">
-        <p class="section-title">Projects</p>
-        <p class="divider"></p>
-        Lots of good stuff:
-        <a href="http://tower-climber.conorbutte.me">Tower Climber</a>
-        <a href="http://harold-engine.conorbutte.me">Harold Engine</a>
       </div>
       <div class="section-item">
         <p class="section-title">Professional Experience</p>
+        <p class="section-content">
+          Two years as a full stack developer at Varsity Tutors.
+          IT technician for the Department of Defence.
+          Instructor for Byte Camp.
+        </p>
         <p class="divider"></p>
-        Two years as a full stack developer at Varsity Tutors.
-        IT technician for the Department of Defence.
-        Instructor for Byte Camp.
+      </div>
+      <div class="section-item">
+        <p class="section-title">Projects</p>
+        <p class="section-content">
+          Lots of good stuff:
+          <a style="color: #222;" href="http://tower-climber.conorbutte.me">Tower Climber</a>
+          <a style="color: #222;" href="http://harold-engine.conorbutte.me">Harold Engine</a>
+        </p>
       </div>
     </div>
     <footer class="footer">
