Add about me content

--- a/index.html
+++ b/index.html
@@ -12,44 +12,56 @@
     />
     <title>Conor's Site</title>
   </head>
-  <body class="main-body">
-    <script src="js/index.js"></script>
-    <div class="resume-box">
-      <a class="resume-link" href=".resources/Resume Feb 2021.pdf"><i class="fa fa-download"></i> Download Resume</a>
-    </div>
-    <div class="sections">
-      <div class="section-item">
-        <p class="section-title">About Me</p>
-        <p class="section-content">
-          Software Engineering student at the University of Victoria.
-        </p>
-        <p class="divider"></p>
+    <body class="main-body">
+      <script src="js/index.js"></script>
+      <div class="resume-box">
+        <a class="resume-link" href=".resources/Resume Feb 2021.pdf"><i class="fa fa-download"></i> Download Resume</a>
       </div>
-      <div class="section-item">
-        <p class="section-title">Professional Experience</p>
-        <p class="section-content">
-          Two years as a full stack developer at Varsity Tutors.
-          IT technician for the Department of Defence.
-          Instructor for Byte Camp.
-        </p>
-        <p class="divider"></p>
+      <div class="sections">
+        <section class="section-item">
+          <p class="section-title">About Me</p>
+          <div class="section-body">
+            <p class="section-text">
+              My name is Conor Butte-Landsfried, a Software Engineering student at the University of Victoria. I am currently in my 4th year and have 
+              an expected graduation date of August 2021. Academically, my main focus in school has been in machine learning and software security. More recently,
+              I have begun to focus on scalable systems as well as robust and efficient computing. Professionally, I have had much experience working as a React 
+              developer for frontend development, as well as backend python development.
+              <br>
+              <br>
+              Outside of work and school, I like to balance my time between projects and physical activity. I am currently working on a
+              <a style="color: #222;" href="https://github.com/sentalytics" target="_blank" rel="noopener noreferrer">personal project</a> focused on building 
+              skills with industry technology such as AWS serverless architecture, noSQL databases and machine learning. Aside from software development, I also believe 
+              it is equally important to physically exercise to stay healthy both physically and mentally. Over the past three years I have taken part in several half 
+              marathons, most recently participating in the Victoria 70.8 Ironman race.
+          </div>
+          <p class="divider"></p>
+        </section>
+        <section class="section-item">
+          <p class="section-title">Professional Experience</p>
+          <p class="section-body">
+            Most recently, I was employed as a Full Stack Developer at 
+            <a style="color: #222;" href="https://www.linkedin.com/company/varsity-tutors/" target="_blank" rel="noopener noreferrer">Varsity Tutors</a>
+          </p>
+          <p class="divider"></p>
+        </section>
+        <section class="section-item">
+          <p class="section-title">Projects</p>
+          <p class="section-body">
+            Lots of good stuff:
+            <a style="color: #222;" href="https://github.com/sentalytics" target="_blank" rel="noopener noreferrer">Sentiment Analysis</a>
+            <a style="color: #222;" href="http://tower-climber.conorbutte.me" target="_blank" rel="noopener noreferrer">Tower Climber</a>
+            <a style="color: #222;" href="http://harold-engine.conorbutte.me" target="_blank" rel="noopener noreferrer">Harold Engine</a>
+          </p>
+        </section>
+        <div style="height: 150px;"></div>
       </div>
-      <div class="section-item">
-        <p class="section-title">Projects</p>
-        <p class="section-content">
-          Lots of good stuff:
-          <a style="color: #222;" href="http://tower-climber.conorbutte.me">Tower Climber</a>
-          <a style="color: #222;" href="http://harold-engine.conorbutte.me">Harold Engine</a>
-        </p>
-      </div>
-    </div>
-    <footer class="footer">
-      <div class="icon-container">
-        <a class="icon-item" href="https://github.com/Cblands"><i class="fa fa-github-square fa-2x"></i></a>
-        <a class="icon-item" href="mailto:conorbutte+web@gmail.com"><i class="fa fa-envelope-square fa-2x"></i></i></a>
-        <a class="icon-item" href="https://www.linkedin.com/in/cblands/"><i class="fa fa-linkedin fa-2x"></i></a>
-      </div>
-      <p class="small-footer">Built by Conor Butte-Landsfried - 2021</p>
-    </footer>
-  </body>
+      <footer class="footer">
+        <div class="icon-container">
+          <a class="icon-item" href="https://github.com/Cblands" target="_blank" rel="noopener noreferrer"><i class="fa fa-github-square fa-2x"></i></a>
+          <a class="icon-item" href="mailto:conorbutte+web@gmail.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-envelope-square fa-2x"></i></i></a>
+          <a class="icon-item" href="https://www.linkedin.com/in/cblands/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin fa-2x"></i></a>
+        </div>
+        <p class="small-footer">Built by Conor Butte-Landsfried - 2021</p>
+      </footer>
+    </body>
 </html>
