add employment content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,22 @@
           <p class="section-title">Professional Experience</p>
           <p class="section-body">
             Most recently, I was employed as a Full Stack Developer at 
-            <a style="color: #222;" href="https://www.linkedin.com/company/varsity-tutors/" target="_blank" rel="noopener noreferrer">Varsity Tutors</a>
+            <a style="color: #222;" href="https://www.linkedin.com/company/varsity-tutors/" target="_blank" rel="noopener noreferrer">Varsity Tutors</a>, 
+            a position which I held for 2 years. The first half of my
+            employment was spent as an intern, working as a React Developer. The second half of my employment consisted of part-time contract work while attending 
+            University, with a focus on backend Python development. As a full stack developer at Varsity Tutors, my main responsibilities consisted 
+            of maintaining and developing a Python backend hosted on AWS and a React.js web application. These responsibilities allowed me to become familiar 
+            with serverless architecture, microservices and an agile working environment.
+            <br>
+            <br>
+            Prior to working at Varsity Tutors, I obtained an internship as an IT technician for the <a style="color: #222;" href="https://www.linkedin.com/company/department-of-national-defence/" target="_blank" rel="noopener noreferrer">Department of Defence</a>.
+            This position was crucial in developing low level technical skills such as learning how to manage networks, operating system images and large scale
+            equipment inventory. While in this position, I also gained familiarity with writing bash scripts and data management using python.
+            <br>
+            <br>
+            My first internship was as an instructor for <a style="color: #222;" href="https://www.linkedin.com/company/byte-camp/" target="_blank" rel="noopener noreferrer">Byte Camp</a>.
+            This position consisted of teaching students the fundamentals of programming, ranging from simple games using scratch, to more advanced projects such as platform style 
+            games written in javascript. While working at Byte Camp I developed many soft skills such as time management, conflict management and leadership.
           </p>
           <p class="divider"></p>
         </section>
