--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body class="main-body">
       <script src="js/index.js"></script>
       <div class="resume-box">
-        <a class="resume-link" href=".resources/Resume Feb 2021.pdf"><i class="fa fa-download"></i> Download Resume</a>
+        <a class="resume-link" href="resources/Resume Feb 2021.pdf"><i class="fa fa-download"></i> Download Resume</a>
       </div>
       <div class="sections">
         <section class="section-item">
